<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".AddItemsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/add_items_to_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_expiry_date"
        app:layout_constraintVertical_bias="0.89">

        <LinearLayout
            android:id="@+id/inventory_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" />

    </ScrollView>

    <ImageButton
        android:id="@+id/back_icon_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/back_bar_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/back_arrow_dark_40" />

    <EditText
        android:id="@+id/item_name"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:autofillHints="@string/enter_item_hint"
        android:hint="@string/enter_item"
        android:inputType="text|textNoSuggestions"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/add_item_to_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:text="@string/add_item_to_list"
        android:textColor="@color/faded_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:id="@+id/item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="@string/enter_quantity_hint"
        android:ems="10"
        android:hint="@string/enter_quantity"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <Button
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:textColor="@color/faded_white"
        android:id="@+id/add_items_to_inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_items_to_inventory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <Button
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:textColor="@color/faded_white"
        android:id="@+id/set_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_expiry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:textColor="@color/dark_blue"
        android:id="@+id/expiry_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="17dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/add_item_to_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toEndOf="@+id/set_expiry_date"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>