...
    </LinearLayout>

    <Button
        android:backgroundTint="@color/mint_green"
        android:backgroundTintMode="src_over"
        android:textColor="@color/dark_blue"
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        android:layout_marginStart="16dp"/>

    <Button
        android:backgroundTint="@color/mint_green"
        android:backgroundTintMode="src_over"
        android:textColor="@color/dark_blue"
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:layout_marginStart="16dp"/>
</LinearLayout>

