...
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/menu_bar_dark_40" />

    <Button
        android:textSize="24sp"
        android:layout_width="300dp"
        android:id="@+id/manual_scanner"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:text="@string/manual_button"
        android:textColor="@color/faded_white"
        app:layout_constraintBottom_toBottomOf="parent"
...
    <Button
        android:textSize="24sp"
        android:layout_width="300dp"
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:textColor="@color/faded_white"
        android:id="@+id/scanBarcodeButton"
        android:layout_height="wrap_content"
        android:text="@string/barcode_scanner_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
...
